@@ -217,11 +217,11 @@ endfunction
 %!assert (cond (linkage (pdist (x), "average")),   27.045012,t);
 %!assert (cond (linkage (pdist (x), "weighted")),  27.412889,t);
 %! lastwarn(); # Clear last warning before the test
-%!warning <monotonically> linkage (pdist (x), "centroid");
+%!warning <clustering> linkage (pdist (x), "centroid");
 %!test warning off clustering
 %! assert (cond (linkage (pdist (x), "centroid")), 27.457477,t);
 %! warning on clustering
-%!warning <monotonically> linkage (pdist (x), "median");
+%!warning <clustering> linkage (pdist (x), "median");
 %!test warning off clustering
 %! assert (cond (linkage (pdist (x), "median")),   27.683325,t);
 %! warning on clustering
