@@ -13,6 +13,8 @@ Summary of important user-visible changes for statistics x.x.x:
 
       betastat
       binostat
+      combnk
+      linkage
       randsample
       squareform
 
